--- a/Server/data/Bags.cfg
+++ b/Server/data/Bags.cfg
@@ -178,7 +178,7 @@ bag_145=F_WaterBag F_Caps F_CatsPaw F_EmptyJet
 
 # Fire Gecko
 bag_140=FireGeckoWeapon
-FireGeckoWeapon=PID_FIRE_GECKO_FLAME_WEAPON^m
+FireGeckoWeapon=PID_FIRE_GECKO_FLAME_WEAPON^m PID_RAW_GECKO_MEAT
 
 
 # Spore Plant
@@ -940,9 +940,9 @@ bag_504=CaravanPlasma SuperStimpaksReady
 #  Fire Geckos: 550-552
 # ======================================
 
-GeckoFlamePrimary=PID_FLAME_BREATH^m
-GeckoWeakFlamePrimary=PID_WEAK_FLAME_BREATH^m
-GeckoWeakFlameSecondary=PID_WEAK_FLAME_BREATH^e
+GeckoFlamePrimary=PID_FLAME_BREATH^m PID_RAW_GECKO_MEAT
+GeckoWeakFlamePrimary=PID_WEAK_FLAME_BREATH^m PID_RAW_GECKO_MEAT
+GeckoWeakFlameSecondary=PID_WEAK_FLAME_BREATH^e PID_RAW_GECKO_MEAT
 
 # Weak Fire Gecko
 bag_550=GeckoWeakFlamePrimary
